# Stationuli

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  rustfmt.toml  vitest.config.ts  vitest.setup.ts  vitest.workspace.ts
.github/: INTERACTION_FLOW.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.zh-CN.md
.github/01-product/: 01-product-requirements-document.md  product-requirements-document.md
.github/02-design/: 00-System-Design.md  01-cross-platform-file-transfer.md  README.md  android-file-transfer-redesign.md  cross-platform-resource-sharing.md  文件传输场景设计.md  架构模式分析-设备中心vs场景中心.md  桌面端界面重构设计.md  设备通信方案分析.md  设置页面设计.md
.github/design/: README.md  device-discovery-and-file-transfer.md  testing.md
.github/workflows/: build-desktop.yml  build-mobile.yml  release.yml
.husky/: pre-commit
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.tsx  constants.ts  types.ts  utils.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: discovery.rs  lib.rs  logging.rs  state.rs
apps/desktop/src-tauri/src/api/: device.rs  file.rs  mod.rs  projection.rs
apps/desktop/src/api/: device.ts  deviceAdapter.ts  file.ts  fileAdapter.ts  projection.ts
apps/desktop/src/components/: AddDeviceDialog.tsx  DeviceCard.tsx  FileDetailsDialog.tsx  FileSelectionCard.tsx  Layout.tsx  ProjectionControl.tsx  ProjectionView.tsx  ReceivedFilesCard.tsx  ServiceStatusCard.tsx  Sidebar.tsx  TopHeader.tsx  Workspace.tsx
apps/desktop/src/hooks/: useDiscovery.ts  useDiscoverySync.ts  useFileTransfer.ts
apps/desktop/src/layouts/: MainLayout.tsx  Sidebar.tsx  TopHeader.tsx
apps/desktop/src/pages/: DevicesPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
apps/desktop/src/stores/: appStore.ts  discoveryStore.ts  fileTransferStore.ts  uiStore.ts
apps/mobile/: README.md  app.json  index.html  package.json  vite.config.ts  vitest.config.ts
apps/mobile/src/: App.css  App.tsx  README.md  constants.ts
apps/mobile/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/sign-apk/: README.md  generate-keystore.bat  generate-keystore.sh  (+2 more)
docs/: FORMATTING.md
scripts/: generate_icons.py
(+40 files in other folders)
