[package]
name = "stationuli-desktop"
description = "Stationuli desktop application (Tauri)"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stationuli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Base64 编码
base64 = "0.22"

# Stationuli 核心库
stationuli-core = { path = "../../../packages/core" }

# 异步运行时
tokio = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

